--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url =jdbc:mysql://localhost:3306/employee_management_system
 spring.datasource.username=root
-spring.datasource.password=root123
+spring.datasource.password=root
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
 
